# Ventilator

./: .buildinfo  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  .ycm_extra_conf.py  Alarms.SchDoc  CharacterizationTests.md  ControlPanel.qml  Cycle-Controller-Onboard.SchDoc  Cycle-Controller.SchDoc  DesignRationales.md  Dockerfile  FixMoreLungs.cpp  FixMoreLungs.ino  Generated RespiraWorks Ventilator Rev 1.Net  Jenkinsfile  MultiButton.qml  Power.SchDoc  ProjectVentilatorGUI.pro  README.md  RespiraWorks Ventilator Overview.afdesign  RespiraWorks Ventilator Rev 1.PcbDoc  RespiraWorks Ventilator.PrjPcb  ST-LINK.SchDoc  ScopeView.qml  Sensors.SchDoc  Switches.SchDoc  SystemDesignFile  System_Requirements.md  TOP.SchDoc  UI-Computer.SchDoc  Watchdog.SchDoc  alarm.cpp  alarm.h  alarm.ino  annotated.html  blower.h  (+934 more)
.circleci/: .coveralls.yml  codecov.yml  common_tests_Dockerfile  config.yml  controller_tests_Dockerfile  gui_image_Dockerfile  gui_tests_Dockerfile  unit_tests_Dockerfile
.github/: .codecov.yml  FUNDING.yml  pull_request_template.md
02_System_Design/: CONOP.md  README.md
03_Quality_Documentation/: Design Quality Presentation.pptx
Alpha-BOM/: README.md  (+3 more)
docs/: .gitignore  CLA.md  Doxyfile  Makefile  README.md  conf.py  docs.sh  index.rst  lychee.toml  pyproject.toml
docs/api/: doxygen_sphinx.rst
docs/contributing/: CLA.rst  contributing.rst
docs/hardware/: index.rst
docs/process/: index.rst  requirements_management.rst
docs/purchasing/: .gitignore  README.md  make_parts.sh  numbering-schema.rst  parts.json  purchasing-guidelines.rst
docs/scripts/: make_parts.py  make_wiring.py
docs/software/: SDP.rst  SRS.rst  index.rst  level_of_concern.rst
docs/software/api/: doxygen_sphinx.rst
docs/sphinx/: Doxyfile  conf.py
docs/sphinx/api/: index.rst
docs/system/: index.rst  system_requirements.rst
docs/wiring/: .gitignore  README.md  blower.rst  blower_TK_BA7050H12B.rst  blower_TK_BA7050H12B.yml  decorate_table.py  index.rst  make_wiring.sh  oxygen_sensor.rst  oxygen_sensor.yml  pinch_valve.rst  pinch_valve.yml  power_entry.yml
software/debug/: .gitignore  README.md  debug.sh  install.sh  pyproject.toml
software/debug/debug/: debug_cli.py
software/debug/debug/debug_lib/: controller_debug.py  test_data.py  test_scenario.py
software/debug/debug/test_scenarios/: iso_pressure_tests.csv  iso_pressure_tests.json  iso_volume_tests.json
software/debug/debug/util/: error.py
software/debug/debug_lib/: var_info.py
software/debug/protocols/: network_protocol_pb2.py
software/debug/tests/: unit_test.py
software/gui/: .clang-tidy  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  README.md  common.cmake  common.pri  conanfile.txt  defaults.pri  deployment_strategy.md  gui.sh  qserial_output_stream.h  run_eglfs.sh
software/gui/app/: AlarmSound.qml  CMakeLists.txt  ControlPanel.qml  ModeSelectionPopup.qml  Style.qml  app.pro  main.cpp  main.qml  qml.qrc  sample-data
software/gui/app/controls/: AlarmButton.qml  AlarmNotificationBanner.qml  BaseButton.qml  BasePopup.qml  DeviceStatusDisplay.qml  HeaderButton.qml  MainHeader.qml  Mode.qml  ParameterAdjustPopup.qml  ParameterButton.qml  ParameterDisplay.qml  PopupButton.qml  ScopeView.qml  StepCounter.qml  controls.qrc
software/gui/app/controls/graphs/: FlowGraph.qml  PressureGraph.qml  TvGraph.qml
software/gui/app/controls/parameters/: FiO2Parameter.qml  Flowlmp.qml  ITimeParameter.qml  PSTEPParameter.qml  PSUPPParameter.qml  PipParameter.qml  RrParameter.qml  VIVParameter.qml
software/gui/app/controls/readings/: FiO2Display.qml  FlowDisplay.qml  PSUPPDisplay.qml  PipDisplay.qml  RrDisplay.qml  TvDisplay.qml  VivDisplay.qml
software/gui/app/fonts/: fonts.qrc
software/gui/app/images/: images.qrc
software/gui/app/modes/: BIPAP.qml  CPAPMode.qml  HighFlowNasalCannulaMode.qml  PressureAssistMode.qml  PressureControlMode.qml  PressureRegulatedVolumeControlMode.qml  PressureSupportVentilation.qml  SpontaneousVentilationModel.qml  SyncIMVPC.qml  SyncIMVVC.qml  VolumeAssistVentilationMode.qml  VolumeControlVentilationMode.qml  modes.qrc
software/gui/app/sample-data/: README.md
software/gui/app/sounds/: sounds.qrc
software/gui/cmake/: CompilerConfig.cmake  ConanConfig.cmake  CoverageReports.cmake  EnsureBuildType.cmake  FindGTestFix.cmake  InstallConfig.cmake  OutputDirConfig.cmake  QtLibraryConfig.cmake  QtMacFix.cmake  conan.cmake  gcovr
software/gui/rpi-image/: README.md  hosts  rpi-primer.yml
software/gui/rpi-image/files/: lightdm.conf  pulseaudio.service
software/gui/src/: CMakeLists.txt  alarm_manager.cpp  alarm_manager.h  breath_signals.cpp  breath_signals.h  chrono.h  common.cmake  connected_device.h  controller_history.cpp  controller_history.h  gui_state_container.cpp  gui_state_container.h  latching_alarm.cpp  latching_alarm.h  logger.cpp  logger.h  logs.cpp  logs.h  patient_detached_alarm.h  periodic_closure.cpp  periodic_closure.h  pip_exceeded_alarm.h  pip_not_reached_alarm.h  qserial_output_stream.h  respira_connected_device.cpp  respira_connected_device.h  simple_clock.h  src.pro  time_series_graph.cpp  time_series_graph.h  time_series_graph_painter.cpp  time_series_graph_painter.h  viv_exceeded_alarm.h  viv_not_reached_alarm.h
software/gui/tests/: CMakeLists.txt  alarm_manager_test.h  breath_signals_test.h  controller_history_test.h  gui_state_container_test.h  latching_alarm_test.h  logger_test.h  patient_detached_alarm_test.h  periodic_closure_test.h  pip_exceeded_alarm_test.h  pip_not_reached_alarm_test.h  respira_connected_device_test.h  simple_clock_test.h  tests.pro  time_series_graph_painter_test.h  time_series_graph_test.h  tst_main.cpp
software/tools/: .gitignore  README.md  debug.sh  pyproject.toml
software/tools/debug/: debug_cli.py
software/tools/debug/debug_lib/: var_info.py
software/tools/debug/scripts/: README.md
software/tools/debug/util/: serial_detect.py
software/tools/miscellaneous/: README.md  decoder.py  mock_cycle_controller.py
software/tools/scenarios/: iso_volume_tests.csv
(+2434 files in other folders)
